2020-09-12  Dirk Eddelbuettel  <edd@debian.org>

	* docs/: Added package website
	* docs-src/: Added package website inputs

	* README.md: Added badge and short paragraph linking to documentation

2020-08-26  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Release 0.3.9

	* inst/tinytest/test_simple.R: Giving up on CRAN as timezone
	attributes are inconsistently set between machines

	* R/anytime.R: Change http:// to https://
	* man/anytime.Rd: Idem
	* man/anytime-package.Rd: Idem
	* README.md: Idem

2020-07-23  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Release 0.3.8

2020-07-22  Dirk Eddelbuettel  <edd@debian.org>

	* tests/tinytest.R: No longer call tests in parallel

2020-07-20  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Switch to 'bionic' and R 4.0.*

2020-07-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* R/init.R: Support OS detection for some flavours of Linux, add
	predicates to test e.g. .isUbuntu() vs .isFedora()
	* NAMESPACE: Import utils::read.table() for this

	* inst/tinytest/test_simple.R: Also skip if on Fedora as the CRAN
	tests apparently cannot be fixed

2020-04-14  Dirk Eddelbuettel  <edd@debian.org>

	* README.md (tinytest): Add 'last commit' badge

2020-01-20  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Release 0.3.7

	* cleanup: Partly rewritten to fall afoul of bashism tests

2020-01-19  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version

	* R/anytime.R: Minor code tightening for calcUnique
	* inst/tinytest/test_calc_unique.R: Renamed from test_pr_110.R

2020-01-18  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_pr_110.R: New test for PR 110

	* R/anytime.R: Reassert proper line-endings, add nocov tags
	* man/anytime.Rd: Re-run roxygenize()

2020-01-18  Stephen Froehlich  <s.froehlich@cablelabs.com>
