@@ -1,3 +1,8 @@
+2020-10-25  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/tinytest/test_simple.R: Reactivate tests with added
+	check.tzone=FALSE
+
 2020-09-12  Dirk Eddelbuettel  <edd@debian.org>
 
 	* docs/: Added package website
